<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello Calendar!</string>
    <string name="app_name">Hebrew Calendar</string>
    <string name="hDatePicker_title">Pick Hebrew Date</string>
    <string name="hDatePicker_Set_Button">Set</string>
    <string name="hDatePicker_Cancel_Button">Cancel</string>
    <string name="today_Button">Today</string>
    <string name="main_no_items">No Events</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="update_calendar">Update Calendar</string>
    <string name="quit">Quit</string>
    <string name="gettigData">Retrieving data …</string>
    <string name="updatingCalendar">Updating Calendar…</string>
    <string name="dayTime">Daytime</string>
    <string name="nightTime">Night time</string>
    <string name="ok_Button">OK</string>
    <string name="close_Button">Close</string>
    <string name="cancel_Button">Cancel</string>
    <string name="update_Button">Save</string>
    <string name="delete_Button">Delete</string>
    <string name="set_button">Set</string>
    <string name="addEvent_Button">Add Event</string>
    <string name="save_Button">Save</string>
    <string name="eventDescription">Event Description</string>
    <string name="eventType">Select Event Type</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="refresh">Refresh Events</string>
    <string name="newEventTitle">New Event:</string>
    <string name="deleteQuestion">OK to delete this event?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tools">Tools</string>
    <string name="backup">Backup to Google Drive</string>
    <string name="restore">Restore from Google Drive</string>
    <string name="backupMessage">Uploading Data to Google Drive</string>
    <string name="restoreMessage">Retrieving Data from Google Drive</string>
    <string name="backupSuccessMessage">Created a file in App Folder: </string>
    <string name="backupErrorMessage">Error while trying to create the file</string>
    <string name="restoreSuccessMessage">Restored Database File: </string>
    <string name="restoreErrorMessage">Error while restoring backup file</string>
    <string name="restoreFileNotFoundrMessage">Database File Not Found</string>
    <string name="dataRestore_title">Hebrew Events Restore</string>
    <string name="dataRestore_success">Restore Successful</string>
    <string name="dataRestore_failed">Restore Failed</string>
    <string name="chooseCalendar">Choose Calendar</string>
    <string name="notification">Reminders</string>
    <string name="numberOfYears">Number Of Years Ahead</string>
    <string name="updateCalendar_Button">Update</string>
    <string name="selectCalendar">Select Calendar</string>
    <string name="setReminder">Reminders</string>
    <string name="title_activity_geo_preferences">GeoPreferencesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="shabbas_yomtov_starts">Candle Lighting Time: </string>
    <string name="shabbas_ends">Shabbat Ends: </string>
    <string name="yomtov_ends">Yom Tov Ends: </string>
    <string name="title_activity_data_backup">DataBackupActivity</string>
    <string name="restoreWarning">Local data will be replaced with the latest backup.</string>
    <string name="restoreConfirm">Do you want to proceed ?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

</resources>
