<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/backup"
        android:icon="@drawable/googledriveicon"
        android:title="@string/backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/restore"
        android:icon="@drawable/googledriveicon"
        android:title="@string/restore"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/tools"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/mainQuit"
        android:icon="@drawable/exit"
        android:title="@string/quit"
        app:showAsAction="never" />

</menu>