<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >  
	 
	 <TextView
	     android:id="@+id/textView1"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="@string/chooseCalendar"
	     android:textSize="16sp" />

	<Spinner  
	    android:id="@+id/myCalendars"  
	    android:layout_height="wrap_content"  
	    android:layout_width="fill_parent" 	    
	    android:prompt="@string/selectCalendar"   
	    android:padding="2dp"
	    android:gravity="center"
	    android:scaleType="fitCenter">  
	</Spinner> 
	
 	<TextView
 	    android:id="@+id/textView2"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:text="@string/notification" 
 	    android:textSize="16sp" />	
 	<Spinner  
	    android:id="@+id/notofications"  
	    android:layout_height="wrap_content"  
	    android:layout_width="fill_parent" 	    
	    android:prompt="@string/setReminder"   
	    android:entries="@array/notifications"
	    android:padding="2dp"
	    android:gravity="center"
	    android:scaleType="fitCenter"> 
	</Spinner>

</LinearLayout>